@startuml
'https://plantuml.com/class-diagram

abstract class App
abstract class Input
abstract class wordsInFile
abstract class wordCount
abstract class output

Input <|-- App
App <|-- Input

wordsInFile <|-- App
App <|-- wordsInFile

wordCount <|-- App
App <|-- wordCount

output <|-- App


class App {
main()
}

class Input {
String Input
}

class wordsInFile{
List<String> words
}

class wordCount{
int[] word
}

class output{
void output
}

@enduml